src/ast/passes/snapshots/transmute__ast__passes__implicit_ret_converter__tests__explicit_return.snap
---
source: src/ast/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret 42;
}

