src/ast/passes/snapshots/transmute__ast__passes__implicit_ret_converter__tests__implicit_return_if.snap
---
source: src/ast/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  if c {
    42;
  }
  ret 43;
}

