src/ast/passes/snapshots/transmute__ast__passes__implicit_ret_converter__tests__implicit_return_if_full.snap
---
source: src/ast/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  ret if c {
    42;
  }
  else {
    43;
  };
}

