src/ast/passes/snapshots/transmute__ast__passes__implicit_ret_converter__tests__implicit_return_simple.snap
---
source: src/ast/passes/implicit_ret_converter.rs
expression: w
---
let f(): number = {
  41;
  ret 42;
}

